--- a/EVTCAnalytics/EVTCAnalytics.csproj
+++ b/EVTCAnalytics/EVTCAnalytics.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>GW2Scratch.EVTCAnalytics</AssemblyName>
     <RootNamespace>GW2Scratch.EVTCAnalytics</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
