--- a/.github/workflows/release-manager.yml
+++ b/.github/workflows/release-manager.yml
@@ -9,14 +9,13 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: true
-    - name: Setup .NET 6
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v4
       with:
-        # This is required to avoid a breaking change in 6.0.2 https://github.com/dotnet/core/pull/7346/ 
-        dotnet-version: 6.0.101
+        dotnet-version: '8.0.x'
     # This is a workaround for issue https://github.com/actions/virtual-environments/issues/1090,
     # which causes to nuget restores to fail
     - name: Clean NuGet cache
